--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="10dp"
-        android:weightSum="100">
+        android:weightSum="100"
+        android:id="@+id/linearLayout">
 
         <LinearLayout
             android:orientation="vertical"
@@ -81,20 +82,22 @@
             android:focusableInTouchMode="true">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="HUMIDITY"
                 android:id="@+id/humidityLabel"
-                android:textColor="#80ffffff"/>
+                android:textColor="#80ffffff"
+                android:gravity="center_horizontal"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0.88"
                 android:id="@+id/humidityValue"
                 android:singleLine="true"
                 android:textSize="24sp"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white"
+                android:gravity="center_horizontal"/>
         </LinearLayout>
 
         <LinearLayout
@@ -104,20 +107,36 @@
             android:layout_weight="50">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="RAIN/SNOW"
                 android:id="@+id/precipLabel"
                 android:singleLine="false"
-                android:textColor="#80ffffff"/>
+                android:textColor="#80ffffff"
+                android:phoneNumber="true"
+                android:gravity="center_horizontal"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="100%"
                 android:id="@+id/precipValue"
                 android:textSize="24sp"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white"
+                android:gravity="center_horizontal"/>
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stormy with a chance of meatballs"
+        android:id="@+id/textView"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/white"
+        android:singleLine="true"
+        android:textSize="18dp"
+        android:gravity="center_horizontal"/>
 </RelativeLayout>
